# obsidian-claude-plugin

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: Plan.md  Requirements.md
docs/decisions/: solution-decision.md
docs/solutions/: approach-1-thin-proxy.md  approach-2-filesystem-direct.md  approach-3-hybrid.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: obsidian-writer.md  research-and-save.md
plugin/skills/deep-researcher/: SKILL.md
plugin/skills/obsidian-canvas/: SKILL.md
plugin/skills/obsidian-writer/: SKILL.md
rust/: Cargo.toml
rust/src/: canvas.rs  config.rs  errors.rs  folders.rs  frontmatter.rs  git.rs  images.rs  links.rs  main.rs  notes.rs  search.rs  vault.rs
src/obsidian_mcp/: __init__.py  canvas.py  config.py  errors.py  folders.py  frontmatter.py  git.py  images.py  links.py  notes.py  search.py  server.py  templates.py  vault.py
tests/: conftest.py  test_canvas.py  test_folders.py  test_frontmatter.py  test_git.py  test_images.py  test_links.py  test_notes.py  test_search.py  test_templates.py  test_vault.py
