[package]
name = "obsidian-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Obsidian vault operations"
license = "MIT"

[[bin]]
name = "obsidian-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
gray_matter = "0.2"
walkdir = "2"
regex = "1"
dirs = "5"
